# api/docs/swagger.yaml
@@ -397,6 +397,60 @@ definitions:
       access_token:
         type: string
     type: object
+  auth_service.MultiCompanyLoginRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  auth_service.MultiCompanyLoginResponse:
+    properties:
+      client_types:
+        items:
+          $ref: '#/definitions/auth_service.ClientType'
+        type: array
+      companies:
+        items:
+          $ref: '#/definitions/auth_service.MultiCompanyLoginResponse_Company'
+        type: array
+    type: object
+  auth_service.MultiCompanyLoginResponse_Company:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      logo:
+        type: string
+      name:
+        type: string
+      owner_id:
+        type: string
+      projects:
+        items:
+          $ref: '#/definitions/auth_service.MultiCompanyLoginResponse_Company_Project'
+        type: array
+      updated_at:
+        type: string
+    type: object
+  auth_service.MultiCompanyLoginResponse_Company_Project:
+    properties:
+      company_id:
+        type: string
+      created_at:
+        type: string
+      domain:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
   auth_service.Object:
     properties:
       object_id:
@@ -5222,6 +5276,52 @@ paths:
                   type: string
               type: object
       summary: V2LoginSuperAdmin
+      tags:
+      - V2_Session
+  /v2/multi-company/login:
+    post:
+      consumes:
+      - application/json
+      description: MultiCompanyLogin
+      operationId: multi_company_login
+      parameters:
+      - description: LoginRequestBody
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/auth_service.MultiCompanyLoginRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User data
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/auth_service.MultiCompanyLoginResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: MultiCompanyLogin
       tags:
       - V2_Session
   /v2/permission:
